@@ -5,8 +5,8 @@ from wagtail.test.utils import WagtailTestUtils
 
 
 class TestUpgradeNotificationPanel(TestCase, WagtailTestUtils):
-    DATA_ATTRIBUTE_UPGRADE_CHECK = "data-upgrade"
-    DATA_ATTRIBUTE_UPGRADE_CHECK_LTS = "data-upgrade-lts-only"
+    DATA_ATTRIBUTE_UPGRADE_CHECK = "data-w-upgrade"
+    DATA_ATTRIBUTE_UPGRADE_CHECK_LTS = "data-w-upgrade-lts-only"
 
     @classmethod
     def setUpTestData(cls):
